Refine game domain services and expand test coverage